@@ -917,6 +917,7 @@ Paul Rubin
 Sam Ruby
 Demur Rumed
 Audun S. Runde
+Eran Rundstein
 Rauli Ruohonen
 Jeff Rush
 Sam Rushing
